fix(mix-portal): add dashboard menu

--- a/apps/mix-portal/src/assets/i18n/en.json
+++ b/apps/mix-portal/src/assets/i18n/en.json
@@ -1,6 +1,11 @@
 {
   "dashboard": {
-    "welcome": "Welcome"
+    "welcome": "Welcome",
+    "changeLogsLabel": "Change Logs/Releases Note",
+    "statisticLabel": "Statistic",
+    "yourWebsiteLabel": "Your website",
+    "blogNewsLabel": "Blog & New",
+    "contributors": "Contributors & Sponsor"
   },
   "sidebar": {
     "dashboard": "Dashboard",
@@ -17,5 +22,8 @@
     "languageSelectLabel": "Select a language:",
     "language": "Language",
     "theme": "Theme"
+  },
+  "common": {
+    "nodata": "No data found"
   }
 }
