--- a/apps/mix-portal/src/assets/i18n/en.json
+++ b/apps/mix-portal/src/assets/i18n/en.json
@@ -12,6 +12,9 @@
     "document": "Document",
     "navigation": "Navigation",
     "gettingStarted": "Getting started",
+    "post": "Posts",
+    "module": "Modules",
+    "page": "Pages",
     "api": "Api",
     "createNew": "Create new",
     "list": "List",
@@ -24,6 +27,9 @@
     "theme": "Theme"
   },
   "common": {
-    "nodata": "No data found"
+    "nodata": "No data found",
+    "createNew": "Create New {{type}}",
+    "list": "{{type}} List",
+    "filterGuideline": "Use the filter side bar on the right to filter and search your {{type}}."
   }
 }
