feat(mix-portal): add database module routing

--- a/apps/mix-portal/src/assets/i18n/en.json
+++ b/apps/mix-portal/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
     "post": "Posts",
     "module": "Modules",
     "page": "Pages",
+    "database": "Databases",
     "api": "Api",
     "createNew": "Create new",
     "list": "List",
