feat: update table edit

--- a/apps/mix-cms/src/assets/i18n/en.json
+++ b/apps/mix-cms/src/assets/i18n/en.json
@@ -1,8 +1,8 @@
 {
-  "Post": "Product",
-  "Posts": "Product(s)",
-  "All Post": "All Product(s)",
-  "Add Your Post": "Add Your Product",
-  "Delete Post": "Delete Product(s)",
-  "Successfully save your post": "Successfully save your product"
+  "Post": "Post",
+  "Posts": "Post(s)",
+  "All Post": "All Post(s)",
+  "Add Your Post": "Add Your Post",
+  "Delete Post": "Delete Post(s)",
+  "Successfully save your post": "Successfully save your post"
 }
